--- a/backend/views/admin/partials/common-scripts.ejs
+++ b/backend/views/admin/partials/common-scripts.ejs
@@ -5,6 +5,6 @@
 <!-- overlayScrollbars -->
 <script src="/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
-<script src="/admin-lte/dist/js/adminlte.js"></script>
+<script src="/admin-lte/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <!-- <script src="/admin-lte/dist/js/demo.js"></script> -->
