refactor(backend): improve upload error handling

--- a/backend/views/admin/vouchers/inputs.ejs
+++ b/backend/views/admin/vouchers/inputs.ejs
@@ -64,7 +64,7 @@
 
   <div class="input-group">
     <div class="custom-file">
-      <input type="file" class="custom-file-input" id="image" name="image" required>
+      <input type="file" class="custom-file-input" id="image" name="imageName" required>
       <label class="custom-file-label" for="image">Choose image</label>
     </div>
   </div>
