feat(backend): implement view banks

--- a/backend/views/admin/partials/dashboard/sidebar.ejs
+++ b/backend/views/admin/partials/dashboard/sidebar.ejs
@@ -38,9 +38,9 @@
           </a>
         </li>
 
-        <li class="nav-header">Metode Pembayaran</li>
+        <li class="nav-header">Payments</li>
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/admin/banks" class="nav-link">
             <i class="nav-icon fas fa-money-check"></i>
             <p>Bank</p>
           </a>
