feat(backend): implement create payment method

--- a/backend/views/admin/partials/dashboard/sidebar.ejs
+++ b/backend/views/admin/partials/dashboard/sidebar.ejs
@@ -38,25 +38,25 @@
           </a>
         </li>
 
-        <li class="nav-header">Payments</li>
+        <li class="nav-header">Payment Methods</li>
         <li class="nav-item">
           <a href="/admin/banks" class="nav-link">
             <i class="nav-icon fas fa-money-check"></i>
-            <p>Bank</p>
+            <p>Banks</p>
           </a>
         </li>
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/admin/payment-methods" class="nav-link">
             <i class="nav-icon fas fa-money-check-alt"></i>
-            <p>Jenis Pembayaran</p>
+            <p>Payment Methods</p>
           </a>
         </li>
 
-        <li class="nav-header">Transaksi</li>
+        <li class="nav-header">Transactions</li>
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/admin/transactions" class="nav-link">
             <i class="nav-icon fas fa-shopping-cart"></i>
-            <p>Transaksi</p>
+            <p>Transactions</p>
           </a>
         </li>
       </ul>
