--- a/backend/views/admin/error.ejs
+++ b/backend/views/admin/error.ejs
@@ -9,7 +9,7 @@
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper m-0">
     <%- include('./partials/header.ejs', { 
-      previousBreadcrumbs: [{ label: "Index", href: "/" }] 
+      previousBreadcrumbs: [{ label: "Admin", href: "/admin" }] 
     }) %>
 
     <!-- Main content -->
@@ -22,7 +22,7 @@
 
           <p>
             We will work on fixing that right away.
-            Meanwhile, you may <a href="/">return to index</a>.
+            Meanwhile, you may <a href="/admin">return to index</a>.
           </p>
         </div>
       </div>
