--- a/backend/views/admin/vouchers/create.ejs
+++ b/backend/views/admin/vouchers/create.ejs
@@ -11,7 +11,7 @@
 
 <%- include('../partials/dashboard/layout-start.ejs', {
   previousBreadcrumbs: [
-    { label: "Dashboard", href: "/admin" },
+    { label: "Admin", href: "/admin" },
     { label: "Vouchers", href: "/admin/vouchers" },
   ]
 }) %>
