--- a/backend/views/admin/banks/index.ejs
+++ b/backend/views/admin/banks/index.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <%- include('../partials/dashboard/layout-start.ejs', {
-  previousBreadcrumbs: [{ label: "Dashboard", href: "/admin" }]
+  previousBreadcrumbs: [{ label: "Admin", href: "/admin" }]
 }) %>
 
 <!-- Main content -->
