--- a/backend/views/admin/categories/create.ejs
+++ b/backend/views/admin/categories/create.ejs
@@ -7,7 +7,7 @@
 
 <%- include('../partials/dashboard/layout-start.ejs', {
   previousBreadcrumbs: [
-    { label: "Dashboard", href: "/admin" },
+    { label: "Admin", href: "/admin" },
     { label: "Categories", href: "/admin/categories" },
   ]
 }) %>
