--- a/backend/views/admin/categories/index.ejs
+++ b/backend/views/admin/categories/index.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <%- include('../partials/dashboard/layout-start.ejs', {
-  previousBreadcrumbs: [{ label: "Dashboard", href: "/admin" }]
+  previousBreadcrumbs: [{ label: "Admin", href: "/admin" }]
 }) %>
 
 <!-- Main content -->
