--- a/backend/views/admin/nominals/edit.ejs
+++ b/backend/views/admin/nominals/edit.ejs
@@ -10,7 +10,7 @@
 
 <%- include('../partials/dashboard/layout-start.ejs', {
   previousBreadcrumbs: [
-    { label: "Dashboard", href: "/admin" },
+    { label: "Admin", href: "/admin" },
     { label: "Nominals", href: "/admin/nominals" },
   ]
 }) %>
