fix(backend): move helper middlewares

--- a/backend/views/admin/partials/common-scripts.ejs
+++ b/backend/views/admin/partials/common-scripts.ejs
@@ -1,10 +1,10 @@
 <!-- jQuery -->
-<script src="/admin-lte/plugins/jquery/jquery.min.js"></script>
+<script src="/admin/admin-lte/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/admin/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- overlayScrollbars -->
-<script src="/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<script src="/admin/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
-<script src="/admin-lte/dist/js/adminlte.min.js"></script>
+<script src="/admin/admin-lte/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<!-- <script src="/admin-lte/dist/js/demo.js"></script> -->
+<!-- <script src="/admin/admin-lte/dist/js/demo.js"></script> -->
